Fix layout issues

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,16 +4,19 @@
   src: url(../assets/fonts/RedHatDisplay-Black.ttf);
   font-family: "RedHatDisplay-Black";
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   src: url(../assets/fonts/RedHatDisplay-Bold.ttf);
   font-family: "RedHatDisplay-Bold";
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   src: url(../assets/fonts/RedHatDisplay-Medium.ttf);
   font-family: "RedHatDisplay-Medium";
   font-style: normal;
+  font-display: swap;
 }
 //variables
 $clr-husky: #e0e8ff;
@@ -65,6 +68,9 @@ body {
   &--hero {
     width: min(100%, 23.4375rem);
     @include mobile-landscape {
+      width: min(100%, 23.4375rem);
+    }
+    @include laptop {
       width: min(100%, 28.125rem);
     }
   }
@@ -129,8 +135,8 @@ body {
     background-color: $clr-ghost-white;
     padding: 1rem;
     border-radius: 0.6875rem;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
     gap: 1.25rem;
     align-items: center;
   }
@@ -152,8 +158,6 @@ body {
     font-size: 0.8125rem;
     font-family: $font-rhd-bold;
     color: $clr-violet-glow;
-    flex-grow: 1;
-    text-align: right;
     @include mobile-landscape {
       font-size: 0.875rem;
     }
